--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -8,4 +8,25 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.drawing.MainActivity" >
 
+    <EditText
+        android:id="@+id/editText1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="39dp"
+        android:ems="10"
+        android:hint="Circle_Radius" >
+
+        <requestFocus />
+    </EditText>
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@+id/editText1"
+        android:text="Submit" />
+
 </RelativeLayout>
